Issue #23628 + #23507 JDK17 support - replaced deprecated Proxy.getProxyClass
- EJB tests failed on JDK17 because of this
- also more consistent generateAndLoad (to be finished in next commits)